feat: add meta tags

--- a/api/articles/models/articles.settings.json
+++ b/api/articles/models/articles.settings.json
@@ -23,6 +23,18 @@
     },
     "title": {
       "type": "string"
+    },
+    "tags": {
+      "type": "json"
+    },
+    "image": {
+      "collection": "file",
+      "via": "related",
+      "plugin": "upload",
+      "required": false
+    },
+    "description": {
+      "type": "text"
     }
   }
 }
