--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "houk-space",
+  "name": "cms.houk.space",
   "private": true,
   "version": "0.1.0",
-  "description": "A Strapi application",
+  "description": "Headless CMS for blog content",
   "scripts": {
     "develop": "strapi develop",
     "start": "strapi start",
@@ -27,7 +27,7 @@
     "strapi-utils": "3.0.0-beta.19.3"
   },
   "author": {
-    "name": "A Strapi developer"
+    "name": "JT Houk <jt@houk.space> (https://jt.houk.space/)"
   },
   "strapi": {
     "uuid": "d97a7d36-3817-4ebc-8e43-e41ed2244ae0"
