--- a/api/articles/models/articles.settings.json
+++ b/api/articles/models/articles.settings.json
@@ -35,7 +35,7 @@
       "plugin": "upload",
       "required": false
     },
-    "description": {
+    "summary": {
       "type": "text"
     },
     "status": {
@@ -47,6 +47,15 @@
       ],
       "default": "draft",
       "required": true
+    },
+    "author": {
+      "type": "string"
+    },
+    "location": {
+      "type": "string"
+    },
+    "date": {
+      "type": "date"
     }
   }
 }
