feat: add role to projects

--- a/api/projects/documentation/1.0.0/projects.json
+++ b/api/projects/documentation/1.0.0/projects.json
@@ -623,6 +623,9 @@
           },
           "description": {
             "type": "string"
+          },
+          "role": {
+            "type": "string"
           }
         }
       },
@@ -658,6 +661,9 @@
             "format": "date"
           },
           "description": {
+            "type": "string"
+          },
+          "role": {
             "type": "string"
           },
           "created_by": {
